--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1771,7 +1771,7 @@ body {
 .cid-qtRzpGSNfF {
   padding-top: 90px;
   padding-bottom: 90px;
-  background: linear-gradient(45deg, #232323, #4af796);
+  background: linear-gradient(45deg, #046c12, #046c12);
 }
 @media (min-width: 992px) {
   .cid-qtRzpGSNfF .mbr-figure {
